--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -32,6 +32,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Hadolint
+        # You may pin to the exact commit or the version.
+        # uses: hadolint/hadolint-action@c27bd9edc1e95eed30474db8f295ff5807ebca14
+        uses: hadolint/hadolint-action@v1.5.0
+
       # Login against a Docker registry except on PR
       # https://github.com/docker/login-action
       - name: Log into registry ${{ env.REGISTRY }}
